--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "tsc && npm start"
   },
   "author": "",
   "license": "ISC",
@@ -17,13 +18,15 @@
     "morgan": "^1.10.0",
     "recursive-copy-cli": "^1.0.20",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.6.0"
+    "tsyringe": "^4.6.0",
+    "ws": "^8.10.0"
   },
   "devDependencies": {
     "@types/bson": "^4.2.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/pug": "^2.0.6",
+    "@types/ws": "^8.5.3",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
   }
